--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,88 @@
-# build output
-dist/
+# Dependencies
+node_modules/
+.pnpm-store/
 
-# generated types
+# Build outputs
+dist/
 .astro/
 
-# dependencies
-node_modules/
+# Environment variables
+.env
+.env.local
+.env.production
 
-# logs
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# environment variables
-.env
-.env.production
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-# macOS-specific files
-.DS_Store
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
 
-# jetbrains setting folder
-.idea/
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nuxt
+
+# Gatsby files
+.cache/
+public
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
